--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -15,13 +15,17 @@ javax.persistence.jdbc.password=EDIT_THIS
 hibernate.show_sql=false
 hibernate.format_sql=true
 hibernate.use_sql_comments=false
-hibernate.jdbc.batch_size=500
-hibernate.jdbc.default_batch_fetch_size=500
+hibernate.jdbc.batch_size=30
+hibernate.jdbc.default_batch_fetch_size=16
+hibernate.c3p0.min_size=20
+hibernate.c3p0.max_size=20
+hibernate.c3p0.timeout=1800
+hibernate.c3p0.max_statements=50
 
 #
 # Lucene index base
 #
-hibernate.search.default.indexBase=EDIT_THIS/indexes
+hibernate.search.default.indexBase=C:/data/indexes
 hibernate.search.lucene_version=LUCENE_36
 hibernate.search.default.directory_provider=filesystem
 
@@ -103,9 +107,7 @@ loader.ICD9CM.input.data=C:/data/icd9cm-2013.xml
 #
 # Webapp base URL (currently unused)
 #
-base.url=
-deploy.favicon=/path/to/images/favicon.png
-deploy.logo=/path/to/images/logo.png
+base.url=http://localhost:8080/term-server-rest
 
 #
 # URL for security service
