--- a/config/prod/src/main/resources/config.properties
+++ b/config/prod/src/main/resources/config.properties
@@ -15,8 +15,12 @@ javax.persistence.jdbc.password=EDIT_THIS
 hibernate.show_sql=false
 hibernate.format_sql=true
 hibernate.use_sql_comments=false
-hibernate.jdbc.batch_size=500
-hibernate.jdbc.default_batch_fetch_size=500
+hibernate.jdbc.batch_size=30
+hibernate.jdbc.default_batch_fetch_size=16
+hibernate.c3p0.min_size=20
+hibernate.c3p0.max_size=20
+hibernate.c3p0.timeout=1800
+hibernate.c3p0.max_statements=50
 
 #
 # Lucene index base
@@ -90,23 +94,9 @@ identifier.release.handler.ICD9CM.class=org.ihtsdo.otf.ts.jpa.services.handlers.
 action.service.timeout=7200000
 
 #
-# SNOMEDCT data location
+# Webapp base URL (currently unused)
 #
-loader.SNOMEDCT.input.data=C:/data/snomedct-20140731-mini
-loader.SNOMEDCT.delta.data=C:/data/snomed-dailybuild-mini
-
-
-#
-# ICD9CM data location
-#
-loader.ICD9CM.input.data=C:/data/icd9cm-2013.xml
-
-#
-# Webapp base URL 
-#
-base.url=http://localhost:8080/term-server-rest
-deploy.favicon=c:/data/images/favicon.png
-deploy.logo=c:/data/images/logo.png
+base.url=http://snomed.terminology.tools/term-server-rest
 
 #
 # URL for security service
@@ -116,11 +106,17 @@ security.handler=DEFAULT
 security.handler.DEFAULT.class=org.ihtsdo.otf.ts.jpa.services.handlers.DefaultSecurityServiceHandler
 #security.handler.IHTSDO.class=org.ihtsdo.otf.ts.jpa.services.handlers.IHTSDOSecurityServiceHandler
 #security.handler.IHTSDO.url=https://usermanagement.ihtsdotools.org/security-web/query/
-security.handler.UTS.class=org.ihtsdo.otf.ts.jpa.services.handlers.UtsSecurityServiceHandler
-security.handler.UTS.license.code=NLM-XXXX
+security.handler.UTS.license.code=NLM-XXX
 security.handler.UTS.url=https://uts-ws.nlm.nih.gov/restful/isValidUMLSUser
 
 #
 # Exception processing emails
 #
-
+mail.enabled=true
+mail.smtp.user=EDIT_THIS
+mail.smtp.password=
+mail.smtp.host=localhost
+mail.smtp.port=587
+mail.smtp.starttls.enable=false
+mail.smtp.auth=false
+mail.smtp.to=EDIT_THIS
