--- a/jpa-services/pom.xml
+++ b/jpa-services/pom.xml
@@ -85,6 +85,11 @@
       <artifactId>jackson-module-jaxb-annotations</artifactId>
     </dependency>
 
+	<dependency>
+		<groupId>au.csiro</groupId>
+		<artifactId>snorocket-snapi</artifactId>
+	</dependency>
+
     <!-- Unit tests -->
     <dependency>
       <groupId>junit</groupId>
