Finishing touches on config fixes.

--- a/config/dev-windows/src/main/resources/config-test.properties
+++ b/config/dev-windows/src/main/resources/config-test.properties
@@ -25,7 +25,7 @@ hibernate.c3p0.max_statements=50
 #
 # Lucene index base
 #
-hibernate.search.default.indexBase=EDIT_THIS/testindexes
+hibernate.search.default.indexBase=C:/termserver/testindexes
 hibernate.search.lucene_version=LUCENE_36
 hibernate.search.default.directory_provider=filesystem
 
