--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -25,7 +25,7 @@ hibernate.c3p0.max_statements=50
 #
 # Lucene index base
 #
-hibernate.search.default.indexBase=C:/data/indexes
+hibernate.search.default.indexBase=C:/termserver/data/indexes
 hibernate.search.lucene_version=LUCENE_36
 hibernate.search.default.directory_provider=filesystem
 
