--- a/jpa-services/pom.xml
+++ b/jpa-services/pom.xml
@@ -91,7 +91,12 @@
       <artifactId>junit</artifactId>
     </dependency>
 
-
+    <!-- Guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>10.0.1</version>
+    </dependency>
   </dependencies>
 
 </project>
