--- a/config/prod/src/main/resources/config.properties
+++ b/config/prod/src/main/resources/config.properties
@@ -17,10 +17,10 @@ hibernate.format_sql=true
 hibernate.use_sql_comments=false
 hibernate.jdbc.batch_size=30
 hibernate.jdbc.default_batch_fetch_size=16
-hibernate.c3p0.min_size=20
-hibernate.c3p0.max_size=20
-hibernate.c3p0.timeout=1800
-hibernate.c3p0.max_statements=50
+#hibernate.c3p0.min_size=20
+#hibernate.c3p0.max_size=20
+#hibernate.c3p0.timeout=1800
+#hibernate.c3p0.max_statements=50
 
 #
 # Lucene index base
