--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -18,6 +18,7 @@
     <!-- Set default maven settings -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <releaseVersion>${project.version}</releaseVersion>
 
     <!-- Set maven plugin versions -->
     <maven.compiler.plugin.version>3.0</maven.compiler.plugin.version>
@@ -57,27 +58,27 @@
       <dependency>
         <groupId>org.ihtsdo.otf.term-server</groupId>
         <artifactId>term-server-model</artifactId>
-        <version>${project.version}</version>
+        <version>${releaseVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.ihtsdo.otf.term-server</groupId>
         <artifactId>term-server-jpa-model</artifactId>
-        <version>${project.version}</version>
+        <version>${releaseVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.ihtsdo.otf.term-server</groupId>
         <artifactId>term-server-services</artifactId>
-        <version>${project.version}</version>
+        <version>${releaseVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.ihtsdo.otf.term-server</groupId>
         <artifactId>term-server-jpa-services</artifactId>
-        <version>${project.version}</version>
+        <version>${releaseVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.ihtsdo.otf.term-server</groupId>
         <artifactId>term-server-rest-client</artifactId>
-        <version>${project.version}</version>
+        <version>${releaseVersion}</version>
       </dependency>
 
       <!-- JPA dependencies -->
@@ -233,6 +234,11 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${apache.commons.lang3.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>10.0.1</version>
       </dependency>
 
     </dependencies>
