--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -64,6 +64,9 @@ validation.service.handler.NEW_CONCEPT.languageId=900000000000509007
 workflow.listener.handler=DEFAULT
 workflow.listener.handler.DEFAULT.class=org.ihtsdo.otf.ts.jpa.services.handlers.DefaultWorkflowListener
 
+classifier.handler=SNOROCKET
+classifier.handler.SNOROCKET.class=org.ihtsdol.otf.ts.handlers.SnorocketClassifier;
+
 #
 # Graph resolution handler
 #
