--- a/config/prod/src/main/resources/config.properties
+++ b/config/prod/src/main/resources/config.properties
@@ -65,6 +65,12 @@ workflow.listener.handler=DEFAULT
 workflow.listener.handler.DEFAULT.class=org.ihtsdo.otf.ts.jpa.services.handlers.DefaultWorkflowListener
 
 #
+# Classifier
+#
+classifier.handler=SNOROCKET
+classifier.handler.SNOROCKET.class=org.ihtsdo.otf.ts.jpa.services.handlers.SnorocketClassifier;
+
+#
 # Graph resolution handler
 #
 graph.resolution.handler=DEFAULT
