--- a/admin/loader/pom.xml
+++ b/admin/loader/pom.xml
@@ -140,6 +140,7 @@
                 </goals>
                 <configuration>
                   <terminology>${terminology}</terminology>
+                  <terminologyVersion>${version}</terminologyVersion>
                   <inputFile>${input.file}</inputFile>
                 </configuration>
               </execution>
