--- a/config/dev-windows/src/main/resources/config-test.properties
+++ b/config/dev-windows/src/main/resources/config-test.properties
@@ -110,6 +110,13 @@ security.handler.UTS.license.code=NLM-XXX
 security.handler.UTS.url=https://uts-ws.nlm.nih.gov/restful/isValidUMLSUser
 
 #
+# Admin user for running mojos
+#
+admin.user=EDIT_THIS
+admin.password=EDIT_THIS
+
+
+#
 # Exception processing emails
 #
 mail.enabled=true
