--- a/admin/mojo/pom.xml
+++ b/admin/mojo/pom.xml
@@ -39,6 +39,11 @@
       <groupId>org.ihtsdo.otf.term-server</groupId>
       <artifactId>term-server-rest-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.ihtsdo.otf.term-server</groupId>
+      <artifactId>term-server-rest</artifactId>
+      <classifier>classes</classifier>
+    </dependency>
 
     <!-- JPA dependencies -->
     <dependency>
