--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -121,6 +121,7 @@ base.url=http://localhost:8080/term-server-rest
 security.timeout=7200000
 security.handler=DEFAULT
 security.handler.DEFAULT.class=org.ihtsdo.otf.ts.jpa.services.handlers.DefaultSecurityServiceHandler
+security.handler.DEFAULT.users=EDIT_THIS
 #security.handler.IHTSDO.class=org.ihtsdo.otf.ts.jpa.services.handlers.IHTSDOSecurityServiceHandler
 #security.handler.IHTSDO.url=https://usermanagement.ihtsdotools.org/security-web/query/
 security.handler.UTS.license.code=NLM-XXX
@@ -131,6 +132,16 @@ security.handler.UTS.url=https://uts-ws.nlm.nih.gov/restful/isValidUMLSUser
 #
 admin.user=EDIT_THIS
 admin.password=EDIT_THIS
+
+#
+# Integration test parameters
+# test.user must validate with your security setup using test.password
+# bad.user must not validate with your security setup
+#
+test.user=EDIT_THIS
+test.password=EDIT_THIS
+bad.user=i_am_a_bad_user
+bad.password=i_am_a_bad_password
 
 #
 # Exception processing emails
