--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -121,7 +121,8 @@ base.url=http://localhost:8080/term-server-rest
 security.timeout=7200000
 security.handler=DEFAULT
 security.handler.DEFAULT.class=org.ihtsdo.otf.ts.jpa.services.handlers.DefaultSecurityServiceHandler
-security.handler.DEFAULT.users=EDIT_THIS
+security.handler.DEFAULT.users.admin=admin
+security.handler.DEFAULT.users.viewers=guest
 #security.handler.IHTSDO.class=org.ihtsdo.otf.ts.jpa.services.handlers.IHTSDOSecurityServiceHandler
 #security.handler.IHTSDO.url=https://usermanagement.ihtsdotools.org/security-web/query/
 security.handler.UTS.license.code=NLM-XXX
@@ -130,16 +131,16 @@ security.handler.UTS.url=https://uts-ws.nlm.nih.gov/restful/isValidUMLSUser
 #
 # Admin user for running mojos
 #
-admin.user=EDIT_THIS
-admin.password=EDIT_THIS
+admin.user=admin
+admin.password=admin
 
 #
 # Integration test parameters
 # test.user must validate with your security setup using test.password
 # bad.user must not validate with your security setup
 #
-test.user=EDIT_THIS
-test.password=EDIT_THIS
+test.user=guest
+test.password=guest
 bad.user=i_am_a_bad_user
 bad.password=i_am_a_bad_password
 
