--- a/admin/qa/pom.xml
+++ b/admin/qa/pom.xml
@@ -17,7 +17,77 @@
 
   <profiles>
 
-<!-- TBD -->
+
+    <!-- Database QA, specify -Drun.config=... -->
+    <profile>
+      <id>Database</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.ihtsdo.otf.term-server</groupId>
+            <artifactId>term-server-admin-mojo</artifactId>
+            <executions>
+              <execution>
+                <id>qa-database</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>qa-database</goal>
+                </goals>
+                <configuration>
+                  <!-- Queries should select >1 fields to avoid issues -->
+                  <queries>
+
+                    <property>
+                      <name>Validate active concept default preferred names -
+                        SNOMEDCT</name>
+                      <value>
+                        SELECT terminologyId, defaultPreferredName
+                        FROM
+                        concepts a
+                        WHERE a.active = 1 AND terminology =
+                        'SNOMEDCT' AND NOT EXISTS
+                        (SELECT * FROM descriptions b,
+                        language_refset_members c
+                        WHERE a.id =
+                        b.concept_id
+                        AND
+                        b.active = 1 AND c.active =
+                        1
+                        AND b.id = c.description_id
+                        AND
+                        b.typeId='900000000000003001'
+                        AND c.refSetId =
+                        '900000000000509007'
+                        AND c.acceptabilityId =
+                        '900000000000548007'
+                        AND a.defaultPreferredName =
+                        b.term);
+                      </value>
+                    </property>
+
+                    <property>
+                      <name>Validate concept default preferred names - not
+                        SNOMEDCT</name>
+                      <value>
+                        SELECT terminologyId, defaultPreferredName
+                        FROM
+                        concepts a
+                        WHERE terminology != 'SNOMEDCT' AND NOT EXISTS
+                        (SELECT * FROM descriptions b
+                        WHERE a.id = b.concept_id
+                        AND a.defaultPreferredName = b.term);
+                      </value>
+                    </property>
+
+                  </queries>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
 
   </profiles>
 </project>
