--- a/admin/loader/pom.xml
+++ b/admin/loader/pom.xml
@@ -59,7 +59,7 @@
                 </goals>
                 <configuration>
                   <terminology>${terminology}</terminology>
-                  <terminologyVersion>${version}</terminologyVersion>
+                  <version>${version}</version>
                   <inputDir>${input.dir}</inputDir>
                   <server>${server}</server>
                 </configuration>
@@ -88,7 +88,7 @@
                 </goals>
                 <configuration>
                   <terminology>${terminology}</terminology>
-                  <terminologyVersion>${version}</terminologyVersion>
+                  <version>${version}</version>
                   <inputDir>${input.dir}</inputDir>
                   <server>${server}</server>
                 </configuration>
@@ -145,7 +145,7 @@
                 </goals>
                 <configuration>
                   <terminology>${terminology}</terminology>
-                  <terminologyVersion>${version}</terminologyVersion>
+                  <version>${version}</version>
                   <inputFile>${input.file}</inputFile>
                   <server>${server}</server>
                 </configuration>
@@ -203,13 +203,13 @@
                   <name>${name}</name>
                   <description>${description}</description>
                   <terminology>${terminology}</terminology>
-                  <terminologyVersion>${version}</terminologyVersion>
+                  <version>${version}</version>
                   <adminUser>${admin.user}</adminUser>
                   <scopeConcepts>${scope.concepts}</scopeConcepts>
                   <scopeDescendantsFlag>${scope.descendants.flag}</scopeDescendantsFlag>
                   <scopeExcludesConcepts>${scope.excludes.concepts}</scopeExcludesConcepts>
                   <scopeExcludesDescendantsFlag>${scope.excludes.descendants.flag}</scopeExcludesDescendantsFlag>
-               	  <server>${server}</server>
+                  <server>${server}</server>
                 </configuration>
               </execution>
             </executions>
