--- a/admin/remover/pom.xml
+++ b/admin/remover/pom.xml
@@ -47,7 +47,7 @@
                 </goals>
                 <configuration>
                   <terminology>${terminology}</terminology>
-                  <terminologyVersion>${version}</terminologyVersion>
+                  <version>${version}</version>
                   <server>${server}</server>
                 </configuration>
               </execution>
