Config file fixes

--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -99,18 +99,7 @@ identifier.release.handler.ICD9CM.class=org.ihtsdo.otf.ts.jpa.services.handlers.
 #
 action.service.timeout=7200000
 
-#
-# SNOMEDCT data location
-#
-loader.SNOMEDCT.input.data=C:/data/snomedct-20140731-mini
-loader.SNOMEDCT.delta.data=C:/data/snomed-dailybuild-mini
-
-#
-# ICD9CM data location
-#
-loader.ICD9CM.input.data=C:/data/icd9cm-2013.xml
-
-#
+y#
 # Webapp base URL (currently unused)
 #
 base.url=http://localhost:8080/term-server-rest
@@ -136,11 +125,11 @@ admin.password=admin
 
 #
 # Integration test parameters
-# test.user must validate with your security setup using test.password
+# viewer.user must validate with your security setup using test.password
 # bad.user must not validate with your security setup
 #
-test.user=guest
-test.password=guest
+viewer.user=guest
+viewer.password=guest
 bad.user=i_am_a_bad_user
 bad.password=i_am_a_bad_password
 
