--- a/config/prod/src/main/resources/config.properties
+++ b/config/prod/src/main/resources/config.properties
@@ -126,11 +126,11 @@ admin.password=admin
 
 #
 # Integration test parameters
-# test.user must validate with your security setup using test.password
+# viewer.user must validate with your security setup using test.password
 # bad.user must not validate with your security setup
 #
-test.user=guest
-test.password=guest
+viewer.user=guest
+viewer.password=guest
 bad.user=i_am_a_bad_user
 bad.password=i_am_a_bad_password
 
