Better handling of planned effective time and removed classification test function.

--- a/admin/qa/pom.xml
+++ b/admin/qa/pom.xml
@@ -79,6 +79,9 @@
                       </value>
                     </property>
 
+  <!-- Validate projects -->
+  <!-- Validate release info -->
+  
                   </queries>
                 </configuration>
               </execution>
