Improvements to equals, add maintenance pages.

--- a/config/src/main/resources/nginx/virtual.conf
+++ b/config/src/main/resources/nginx/virtual.conf
@@ -1,9 +1,23 @@
-  server {
+server {
     server_name snomed.term-server.com;
     access_log /var/log/nginx/sct.access.log main;
 
     location / {
         proxy_pass http://localhost:8080/;
+
+     if ( -f /opt/maint/maintain.html){
+        return 503;
+     }
     }
-  }
+s}
+
+error_page 503 @maintenance;
+
+location @maintenance {
+                root /opt/maint;
+                rewrite ^(.*)$ /maintain.html break;
+   }
+
+
+}
 
