Fix @Consumes and @Produces.  fix "user.viewer" property in config.properties

--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -111,7 +111,7 @@ security.timeout=7200000
 security.handler=DEFAULT
 security.handler.DEFAULT.class=org.ihtsdo.otf.ts.jpa.services.handlers.DefaultSecurityServiceHandler
 security.handler.DEFAULT.users.admin=admin
-security.handler.DEFAULT.users.viewers=guest
+security.handler.DEFAULT.users.viewer=guest
 #security.handler.IHTSDO.class=org.ihtsdo.otf.ts.jpa.services.handlers.IHTSDOSecurityServiceHandler
 #security.handler.IHTSDO.url=https://usermanagement.ihtsdotools.org/security-web/query/
 security.handler.UTS.license.code=NLM-XXX
