Cleanup warnings and formatting, adjust "version" vs "terminologyVersion" get full loader working.

--- a/admin/remover/pom.xml
+++ b/admin/remover/pom.xml
@@ -78,6 +78,7 @@
                   <terminology>${terminology}</terminology>
                   <!-- Leave blank to remove all -->
                   <releaseInfoNames>${release.info.names}</releaseInfoNames>
+                  <server>${server}</server>
                 </configuration>
               </execution>
             </executions>
