--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -15,18 +15,22 @@ javax.persistence.jdbc.password=EDIT_THIS
 hibernate.show_sql=false
 hibernate.format_sql=true
 hibernate.use_sql_comments=false
-hibernate.jdbc.batch_size=30
-hibernate.jdbc.default_batch_fetch_size=16
-#hibernate.c3p0.min_size=20
-#hibernate.c3p0.max_size=20
-#hibernate.c3p0.timeout=1800
-#hibernate.c3p0.max_statements=50
+hibernate.jdbc.batch_size=60
+hibernate.jdbc.default_batch_fetch_size=32
+org.hibernate.flushMode=COMMIT
+
+hibernate.c3p0.min_size=10
+hibernate.c3p0.max_size=20
+hibernate.c3p0.acquire_increment=1
+hibernate.c3p0.idle_test_period=3000
+hibernate.c3p0.max_statements=50
+hibernate.c3p0.timeout=1800
+
 
 #
 # Lucene index base
 #
 hibernate.search.default.indexBase=C:/termserver/data/indexes
-hibernate.search.lucene_version=LUCENE_36
 hibernate.search.default.directory_provider=filesystem
 
 #
@@ -114,6 +118,7 @@ security.handler.DEFAULT.users.admin=admin
 security.handler.DEFAULT.users.viewer=guest
 #security.handler.IHTSDO.class=org.ihtsdo.otf.ts.jpa.services.handlers.IHTSDOSecurityServiceHandler
 #security.handler.IHTSDO.url=https://usermanagement.ihtsdotools.org/security-web/query/
+security.handler.UTS.class=org.ihtsdo.otf.ts.jpa.services.handlers.UtsSecurityServiceHandler
 security.handler.UTS.license.code=NLM-XXX
 security.handler.UTS.url=https://uts-ws.nlm.nih.gov/restful/isValidUMLSUser
 
