--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,28 +21,28 @@
     <releaseVersion>${project.version}</releaseVersion>
 
     <!-- Set maven plugin versions -->
-    <maven.compiler.plugin.version>3.0</maven.compiler.plugin.version>
-    <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
-    <maven.surefire.plugin.version>2.16</maven.surefire.plugin.version>
-    <maven.war.plugin.version>2.4</maven.war.plugin.version>
-    <properties.maven.plugin>1.0-alpha-1</properties.maven.plugin>
+    <maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
+    <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
+    <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
+    <maven.war.plugin.version>2.6</maven.war.plugin.version>
+    <properties.maven.plugin>1.0-alpha-2</properties.maven.plugin>
     <build.helper.maven.version>1.9.1</build.helper.maven.version>
     <truezip.maven.version>1.2</truezip.maven.version>
 
     <!-- Set third-party dependency versions -->
-    <hibernate.version>4.1.0.Final</hibernate.version>
-    <org.hibernate.javax.persistence.version>1.0.1.Final</org.hibernate.javax.persistence.version>
+    <hibernate.version>4.3.8.Final</hibernate.version>
+    <hibernate.em.version>4.3.8.Final</hibernate.em.version>
     <javax.transaction.version>1.1</javax.transaction.version>
-    <hibernate.search.version>4.3.0.Final</hibernate.search.version>
-    <hibernate.envers.version>4.0.1.Final</hibernate.envers.version>
+    <hibernate.search.version>5.1.1.Final</hibernate.search.version>
     <hibernate.entitymanager.version>4.1.0.Final</hibernate.entitymanager.version>
     <hibernate.validator.version>5.0.1.Final</hibernate.validator.version>
+    <c3p0.version>0.9.5</c3p0.version>
     <mysql.connector.java.version>5.1.26</mysql.connector.java.version>
-    <slf4j.log4j12.version>1.7.5</slf4j.log4j12.version>
-    <maven.plugin.api.version>3.1.1</maven.plugin.api.version>
-    <jersey.version>1.17.1</jersey.version>
+    <slf4j.log4j12.version>1.7.10</slf4j.log4j12.version>
+    <maven.plugin.api.version>3.2.5</maven.plugin.api.version>
+    <jersey.version>1.19</jersey.version>
     <apache.commons.lang3.version>3.3.2</apache.commons.lang3.version>
-    <jettison.version>1.1</jettison.version>
+    <jettison.version>1.3.7</jettison.version>
     <jsr311-api.version>1.1.1</jsr311-api.version>
     <asm.version>3.1</asm.version>
     <jackson-2.version>2.5.0</jackson-2.version>
@@ -51,6 +51,7 @@
     <cglib.version>2.2.2</cglib.version>
     <javax.mail.version>1.5.2</javax.mail.version>
     <snorocket.snapi.version>1.1.20</snorocket.snapi.version>
+    <lucene.queryparser.version>4.10.0</lucene.queryparser.version>
   </properties>
 
   <dependencyManagement>
@@ -90,11 +91,6 @@
 
       <!-- JPA dependencies -->
       <dependency>
-        <groupId>org.hibernate.javax.persistence</groupId>
-        <artifactId>hibernate-jpa-2.0-api</artifactId>
-        <version>${org.hibernate.javax.persistence.version}</version>
-      </dependency>
-      <dependency>
         <groupId>javax.transaction</groupId>
         <artifactId>jta</artifactId>
         <version>${javax.transaction.version}</version>
@@ -106,28 +102,38 @@
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>${hibernate.em.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
         <artifactId>hibernate-c3p0</artifactId>
         <version>${hibernate.version}</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-search</artifactId>
+        <artifactId>hibernate-search-orm</artifactId>
         <version>${hibernate.search.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.mchange</groupId>
+        <artifactId>c3p0</artifactId>
+        <version>${c3p0.version}</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-envers</artifactId>
-        <version>${hibernate.envers.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <version>${hibernate.entitymanager.version}</version>
+        <version>${hibernate.version}</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate.validator.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.lucene</groupId>
+        <artifactId>lucene-queryparser</artifactId>
+        <version>${lucene.queryparser.version}</version>
       </dependency>
       <dependency>
         <groupId>mysql</groupId>
@@ -247,12 +253,12 @@
         <artifactId>guava</artifactId>
         <version>10.0.1</version>
       </dependency>
-      
+
       <!-- Classifier -->
       <dependency>
-          <groupId>au.csiro</groupId>
-          <artifactId>snorocket-snapi</artifactId>
-          <version>${snorocket.snapi.version}</version>
+        <groupId>au.csiro</groupId>
+        <artifactId>snorocket-snapi</artifactId>
+        <version>${snorocket.snapi.version}</version>
       </dependency>
 
     </dependencies>
